header is ready (without design)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</a>
 			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true">
-				<span class="navbar-toggler-icon">(current)</span>
+				<span class="navbar-toggler-icon"></span>
             </button>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav">
@@ -30,9 +30,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="#">О нас</a>
 					</li>
-					<li class="nav-item active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Контакты</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Контакты</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#">vk.com/rosemarine_spb</a>
 							<a class="dropdown-item" href="#">instagram.com/rosemarine_spb</a>
 							<a class="dropdown-item" href="#">+7 (911) 919-03-49</a>
@@ -40,8 +40,7 @@
 					</li>
 				</ul>
 			</div>  
-		</div>
-						
+		</div>				
     </header>
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
