--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<header>                      
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
 			<a class="navbar-brand mb-0 h1" href="#">
 				<strong>Rosemarine</strong>
 			</a>
@@ -39,7 +40,8 @@
 						</div>
 					</li>
 				</ul>
-			</div>  
+			</div> 
+				</div>
 		</div>				
     </header>
 	
