--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true">
 				<span class="navbar-toggler-icon"></span>
             </button>
-			<div class="collapse navbar-collapse">
+			<div class="navbar-offcanvas navbar-offcanvas-touch" id="js-bootstrap-offcanvas">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Меню</a>
