--- a/index.html
+++ b/index.html
@@ -11,27 +11,31 @@
 
 <body>
 	<header>                      
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container">
-			<a class="navbar-brand mb-0 h1" href="#">
-				<strong>Rosemarine</strong>
-			</a>
-			
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true">
-				<span class="navbar-toggler-icon"></span>
-            </button>
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+			<div class="container-fluid">
+			<div class="navbar-header">
+      <a class="navbar-brand" href="#">Rosemarine</a>
+      <button type="button" class="navbar-toggle offcanvas-toggle" data-toggle="offcanvas" data-target="#js-bootstrap-offcanvas" style="float:left;">
+        <span class="sr-only">Toggle navigation</span>
+        <span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </span>
+      </button>
+    </div>
 			<div class="navbar-offcanvas navbar-offcanvas-touch" id="js-bootstrap-offcanvas">
 				<ul class="navbar-nav">
-					<li class="nav-item active">
+					<li class="active">
 						<a class="nav-link" href="#">Меню</a>
 					</li>
-					<li class="nav-item active">
+					<li class="active">
 						<a class="nav-link" href="#">Цены</a>
 					</li>
-					<li class="nav-item active">
+					<li class="active">
 						<a class="nav-link" href="#">О нас</a>
 					</li>
-					<li class="nav-item dropdown">
+					<li class="dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Контакты</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#">vk.com/rosemarine_spb</a>
