--- a/index.html
+++ b/index.html
@@ -10,42 +10,41 @@
 </head>
 
 <body>
-	<header>                      
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+	<header> 
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-			<div class="navbar-header">
-      <a class="navbar-brand" href="#">Rosemarine</a>
-      <button type="button" class="navbar-toggle offcanvas-toggle" data-toggle="offcanvas" data-target="#js-bootstrap-offcanvas" style="float:left;">
-        <span class="sr-only">Toggle navigation</span>
-        <span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </span>
-      </button>
-    </div>
-			<div class="navbar-offcanvas navbar-offcanvas-touch" id="js-bootstrap-offcanvas">
-				<ul class="navbar-nav">
-					<li class="active">
-						<a class="nav-link" href="#">Меню</a>
-					</li>
-					<li class="active">
-						<a class="nav-link" href="#">Цены</a>
-					</li>
-					<li class="active">
-						<a class="nav-link" href="#">О нас</a>
-					</li>
-					<li class="dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Контакты</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">vk.com/rosemarine_spb</a>
-							<a class="dropdown-item" href="#">instagram.com/rosemarine_spb</a>
-							<a class="dropdown-item" href="#">+7 (911) 919-03-49</a>
-						</div>
-					</li>
-				</ul>
-			</div> 
-				</div>
+				<a class="navbar-brand mb-0 h1" href="#">
+					<strong>Rosemarine</strong>
+				</a>
+
+				<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-main">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbar-main">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Меню</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Цены</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="#">О нас</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Контакты</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="#">vk.com/rosemarine_spb</a>
+								<a class="dropdown-item" href="#">instagram.com/rosemarine_spb</a>
+								<a class="dropdown-item" href="#">+7 (911) 919-03-49</a>
+							</div>
+						</li>
+					</ul>
+				</div> 
+			</div>
 		</div>				
     </header>
 	
