--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
 	
 	<main>
 		
+		
+		<h3 style="text-align: center">Пообщаемся?</h3>
+		<form class="p-5" style="background: #D6D6D6">
+			<div class="form-row">
+				<div class="form-group col-md-6">
+					<label for="name">Имя</label>
+					<input type="text" class="form-control" id="name" placeholder="Введите имя">
+					<small id="forName" class="form-text text-muted">Мы хотим знать, как к Вам обращаться.</small>
+				</div>
+				<div class="form-group col-md-6">
+					<label for="email">Email</label>
+					<input type="email" class="form-control" id="name" placeholder="Введите Email">
+					<small id="forEmail" class="form-text text-muted">Мы сохраним вашу почту в тайне.</small>
+				</div>
+			</div>
+			
+			<div class="form-group">
+				<label for="message">Ваши вопросы, пожелания, замечания и любые другие сообщения</label>
+				<input type="text" class="form-control" id="name" placeholder="Введите текст">
+				<small id="forName" class="form-text text-muted">Мы с удовольствием ответим Вам в скором времени!</small>
+			</div>
+			<button type="submit" style="background: #343A40; display: block; margin: auto" class="btn btn-primary">Отправить</button>
+		</form>
 	</main>
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
