--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		
 		
 		<h3 style="text-align: center">Пообщаемся?</h3>
-		<form class="p-5" style="background: #D6D6D6">
+		<form class="p-5" style="background: #D6D6D6; margin: 5%">
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label for="name">Имя</label>
