--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
     </header>
 	
 	<main>
-		
+		<div class="jumbotron jumbotron-fluid" style="background: #4B545D">
+			<div class="container" style="text-align: center; color: #FFFFFF">
+				<h1 class="display-3" >Rosemarine</h1>
+				<p class="lead">Идеальные условия для Вашего идеального отдыха! <br>
+					Мы постарались собрать все самое лучшее в одном месте. Вы платите только за вход, все остальное мы Вам с радостью обеспечим!</p>
+				<hr color="#FFFFFF"> 
+				<p class="lead" style="font-size: 100%" >Подписывайтесь на нас в соц. сетях, чтобы всегда быть в курсе актуальных акций и мероприятий.</p>
+			</div>
+		</div> 
 		
 		<h3 style="text-align: center">Пообщаемся?</h3>
 		<form class="p-5" style="background: #D6D6D6; margin: 5%">
