--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Rosemarine</title>
-	
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background: #ADADAD">
 	<header> 
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
@@ -59,7 +59,25 @@
 			</div>
 		</div> 
 		
-		<h3 style="text-align: center">Пообщаемся?</h3>
+		<br>
+		<br>
+		
+		<div class="look">
+			<div class="box">
+				<img style="width: 80%; " src="1.jpg">
+				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+			</div>
+			<div class="box">
+				<img style="width: 80%; " src="2.jpg">
+				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+			</div>
+			<div class="box">
+				<img style="width: 80%; " src="3.jpg">
+				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+			</div>
+		</div>
+		
+		<h3 class="display-4" style="text-align: center">Пообщаемся?</h3>
 		<form class="p-5" style="background: #D6D6D6; margin: 5%">
 			<div class="form-row">
 				<div class="form-group col-md-6">
