--- a/index.html
+++ b/index.html
@@ -62,20 +62,28 @@
 		<br>
 		<br>
 		
+		<h3 class="display-4" style="text-align: center">У нас вы найдёте:</h3>
 		<div class="look">
 			<div class="box">
 				<img style="width: 80%; " src="1.jpg">
-				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор еды под всевозможные вкусы! Бургеры, закуски, гарниры, мясо, напитки, десерты... и много чего еще!</p>
 			</div>
 			<div class="box">
 				<img style="width: 80%; " src="2.jpg">
-				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор табаков и вкусов! Насыщенные, дымные и запоминающиеся паровые коктейли для каждого!</p>
 			</div>
 			<div class="box">
 				<img style="width: 80%; " src="3.jpg">
-				<p class="text-capitalize" style="width: 80%; margin-left: 10%">dd</p>
+				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор игр на ps4 на любую компанию, VR (две пары очков), ну и, конечно же, с детства любимые настолочки!</p>
 			</div>
 		</div>
+		
+		<br>
+		
+		<button class="btn btn-primary" style="background: #343A40; display: block; margin: auto" type="button">И много чего ещё...</button>
+				
+		<br>
+		<br>
 		
 		<h3 class="display-4" style="text-align: center">Пообщаемся?</h3>
 		<form class="p-5" style="background: #D6D6D6; margin: 5%">
