--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 		<div class="look">
 			<div class="box">
 				<img style="width: 80%; " src="1.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор еды под всевозможные вкусы! Бургеры, закуски, гарниры, мясо, напитки, десерты... и много чего еще!</p>
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%" ><strong>Огромный выбор </strong>еды под всевозможные вкусы! Бургеры, закуски, гарниры, мясо, напитки, десерты... и много чего еще!</p>
 			</div>
 			<div class="box">
 				<img style="width: 80%; " src="2.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор табаков и вкусов! Насыщенные, дымные и запоминающиеся паровые коктейли для каждого!</p>
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%"><strong>Огромный выбор </strong>табаков и вкусов! Насыщенные, дымные и запоминающиеся паровые коктейли для каждого!</p>
 			</div>
 			<div class="box">
 				<img style="width: 80%; " src="3.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%">Огромный выбор игр на ps4 на любую компанию, VR (две пары очков), ну и, конечно же, с детства любимые настолочки!</p>
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%"><strong>Огромный выбор </strong>игр на ps4 на любую компанию, VR (две пары очков), ну и, конечно же, с детства любимые настолочки!</p>
 			</div>
 		</div>
 		
