--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body style="background: #ADADAD">
 	<header> 
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark" >
 			<div class="container-fluid">
 				<a class="navbar-brand mb-0 h1" href="#">
 					<strong>Rosemarine</strong>
@@ -66,19 +66,22 @@
 		
 		<br>
 		
-		<div class="look">
-			<div class="box">
-				<img style="width: 80%; " src="1.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%" ><strong>Огромный выбор </strong>еды под всевозможные вкусы! Бургеры, закуски, гарниры, мясо, напитки, десерты... и много чего еще!</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-sm-2">
+		
+				<img style="width: 80%; margin-left: 10%" src="1.jpg">
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%; text-align: center" ><strong>Огромный выбор </strong>еды под всевозможные вкусы! Бургеры, закуски, гарниры, мясо, напитки, десерты... и много чего еще!</p>
 			</div>
-			<div class="box">
-				<img style="width: 80%; " src="2.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%"><strong>Огромный выбор </strong>табаков и вкусов! Насыщенные, дымные и запоминающиеся паровые коктейли для каждого!</p>
+			<div class="col-md-4 col-sm-2">
+				<img style="width: 80%; margin-left: 10%" src="2.jpg">
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%;text-align: center"><strong>Огромный выбор </strong>табаков и вкусов! Насыщенные, дымные и запоминающиеся паровые коктейли для каждого!</p>
 			</div>
-			<div class="box">
-				<img style="width: 80%; " src="3.jpg">
-				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%"><strong>Огромный выбор </strong>игр на ps4 на любую компанию, VR (две пары очков), ну и, конечно же, с детства любимые настолочки!</p>
+			<div class="col-md-4 col-sm-2">
+				<img style="width: 80%; margin-left: 10%" src="3.jpg">
+				<p class="text" style="width: 80%; margin-left: 10%; font-size: 120%;text-align: center"><strong>Огромный выбор </strong>игр на ps4 на любую компанию, VR (две пары очков), ну и, конечно же, с детства любимые настолочки!</p>
 			</div>
+				</div>
 		</div>
 		
 		<br>
